Fix "Learn More" link on Higher Ed

--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -12,13 +12,13 @@
                     learning technology give students the tools they need to
                     succeed without having to weigh the cost.
                 </div>
-                <div class="more">Learn More</div>
+                <div class="more"><a class="down-page" href="#getting-started">Learn More</a></div>
             </div>
         </div>
 
         <div class="quotes"></div>
 
-        <div class="getting-started">
+        <div id="getting-started" class="getting-started">
             <div class="header">Getting Started</div>
             <ol class="steps">
                 <li class="step">
