--- a/src/app/pages/higher-ed/higher-ed.scss
+++ b/src/app/pages/higher-ed/higher-ed.scss
@@ -17,6 +17,11 @@
                 content: '►';
                 padding-left: 0.5rem;
             }
+
+            &.down-page::after {
+                color: inherit;
+                content: '▼';
+            }
         }
     }
 
