Style Higher Ed banner responsively

--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -3,16 +3,18 @@
 </style>
 <div class="higher-ed-page page">
     <main id="maincontent">
-        <div class="banner">
+        <div class="hero">
             <div class="overlay">
-                <div class="header">Here is the first song off our new album.</div>
-                <div class="blurb">
-                    Some of the most valuable investments don't have a price tag.
-                    Neither do our textbooks. Our free, high-quality textbooks and
-                    learning technology give students the tools they need to
-                    succeed without having to weigh the cost.
+                <div class="text-block">
+                    <h1 class="header">Here is the first song off our new album.</h1>
+                    <div class="blurb">
+                        Some of the most valuable investments don't have a price tag.
+                        Neither do our textbooks. Our free, high-quality textbooks and
+                        learning technology give students the tools they need to
+                        succeed without having to weigh the cost.
+                    </div>
+                    <div class="more"><a class="down-page" href="#getting-started">Learn More</a></div>
                 </div>
-                <div class="more"><a class="down-page" href="#getting-started">Learn More</a></div>
             </div>
         </div>
 
