Add "you may select more than one" to adoption and interest forms

--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -99,6 +99,7 @@
             </label>
 
             <label>Which ally resources are you using with your book?
+                <span class="select-instructions">You may select more than one.</span>
                 <select multiple name="00NU0000005VmTu">
                      <option value="None" disabled selected>None</option>
                      <option value="Cerego">Cerego</option>
@@ -129,7 +130,9 @@
 
         <div class="col">
             <label class="question">
-                Which of our allies would you like to give permission to contact you about additional resources to support our books?
+                Which of our allies would you like to give permission to contact you about
+                additional resources to support our books?
+                <span class="select-instructions">You may select more than one.</span>
                 <select multiple name="00NU00000055spm">
                     <option value="None" disabled selected>None</option>
                     <option value="Online homework allies">Online homework allies</option>
