--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -168,6 +168,12 @@ form {
         }
     }
 
+    .select-instructions {
+        font-size: 1.2rem;
+        font-style: italic;
+        opacity: 0.8;
+    }
+
     [type="date"] {
         appearance: none;
     }
