Make "Other" fields conditional on the multi-selects

--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -112,11 +112,13 @@
                      <option value="WebAssign">WebAssign</option>
                      <option value="Wiley Plus">Wiley Plus</option>
                      <option value="XYZ Homework">XYZ Homework</option>
+                     <option value="" data-other="other-ally">Other (specify below)</option>
                 </select>
             </label>
 
-            <label>Other
-                <input name="00NU0000005Vls8" class="short" type="text">
+            <label id="other-ally">Other
+                <input name="00NU0000005Vls8" class="short" type="text"
+                placeholder="Ally resources not listed above?">
             </label>
 
             <label>
