--- a/src/app/pages/interest/interest.hbs
+++ b/src/app/pages/interest/interest.hbs
@@ -100,12 +100,14 @@
                         <option value="Twitter">Twitter</option>
                         <option value="Webinar">Webinar</option>
                         <option value="Partner organization">Partner organization</option>
+                        <option value="" data-other="other-source">Other (specify below)</option>
                     </select>
                 </label>
 
-                <label>
+                <label id="other-source" class="hidden">
                     Other:
-                    <input  name="00NU00000055spr" type="text">
+                    <input  name="00NU00000055spr" type="text"
+                    placeholder="Heard about us some other way?">
                 </label>
 
                 <label>
