Use new resource information for constructing resources on Details Also fix bug in new Other option on forms

--- a/src/app/pages/details/resource/resource.hbs
+++ b/src/app/pages/details/resource/resource.hbs
@@ -1,2 +1,2 @@
-<h4 class="resource-title"></h4>
-<a class="resource-link">{{link_text}}</a>
+<h4>{{link_document_title}}</h4>
+<a href="{{link_document_url}}">{{link_text}}</a>
