Add select list for book to faculty verification form
Also fixed error in about-us bios

--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -67,6 +67,31 @@
                     Number of students this semester
                     <input name="00NU00000052VId" type="number" min="1" required />
                 </label>
+                <label>Your OpenStax book:
+                    <select name="00NU00000053nzR" required>
+                        <option value="" disabled selected></option>
+                        <option value="Algebra and Trigonometry">Algebra and Trigonometry</option>
+                        <option value="Anatomy and Physiology">Anatomy and Physiology</option>
+                        <option value="Biology">Biology</option>
+                        <option value="Chemistry">Chemistry</option>
+                        <option value="College Algebra">College Algebra</option>
+                        <option value="College Physics">College Physics</option>
+                        <option value="College Physics for AP® Courses ">College Physics for AP® Courses </option>
+                        <option value="Concepts of Biology">Concepts of Biology</option>
+                        <option value="Introduction to Sociology">Introduction to Sociology</option>
+                        <option value="Introduction to Sociology 2e">Introduction to Sociology 2e</option>
+                        <option value="Introductory Statistics">Introductory Statistics</option>
+                        <option value="Prealgebra">Prealgebra</option>
+                        <option value="Precalculus">Precalculus</option>
+                        <option value="Principles of Economics">Principles of Economics</option>
+                        <option value="Principles of Macroeconomics">Principles of Macroeconomics</option>
+                        <option value="Principles of Macroeconomics for AP® Courses">Principles of Macroeconomics for AP® Courses</option>
+                        <option value="Principles of Microeconomics">Principles of Microeconomics</option>
+                        <option value="Principles of Microeconomics for AP® Courses">Principles of Microeconomics for AP® Courses</option>
+                        <option value="Psychology">Psychology</option>
+                        <option value="U.S. History">U.S. History</option>
+                    </select>
+                </label>
                 <div class="cta">
                     <input type="submit" value="Submit" role="button" class="btn"/>
                 </div>
@@ -74,4 +99,3 @@
         </div>
     </div>
 </form>
-
