fix bucket copy on higher-ed page

--- a/src/app/pages/higher-ed/higher-ed.scss
+++ b/src/app/pages/higher-ed/higher-ed.scss
@@ -81,6 +81,10 @@ $hero-break-width: 1024px;
         }
     }
 
+    .quote-buckets {
+        background-color: lighten(color(neutral-lighter), 8%);
+    }
+
     .getting-started {
         background-color: color(orange);
         color: white;
