--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <div class="quotes"></div>
+        <div class="quote-buckets"></div>
 
         <div id="getting-started" class="getting-started">
             <div class="header">Getting Started</div>
