--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -429,7 +429,7 @@
     .authors {
         font-size: 1.6rem;
         line-height: 2.6rem;
-        margin: 6rem 0 3rem;
+        padding: 6rem 0 3rem;
 
         .container {
             flex-flow: column wrap;
