--- a/src/styles/components/headers.scss
+++ b/src/styles/components/headers.scss
@@ -58,6 +58,9 @@ h4 {
         letter-spacing: -0.2rem;
         line-height: 5rem;
         margin-bottom: 1rem;
+        @include phone {
+            font-size: 5rem;
+        }
     }
 
     h2 {
@@ -66,6 +69,9 @@ h4 {
         letter-spacing: -0.2rem;
         line-height: 5rem;
         margin-bottom: 1rem;
+        @include phone {
+            font-size: 4rem;
+        }
     }
 
     .cta {
