add logout link to header

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -13,7 +13,7 @@
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="User Menu">
                         <li role="presentation"><a href="http://accounts.openstax.org" role="menuitem" tabindex="-1">Account Profile</a></li>
                         <li role="presentation"><a href="/faculty-verification" role="menuitem" tabindex="-1">Request instructor access</a></li>
-                        <li role="presentation"><a href="/" role="menuitem" tabindex="-1">Logout</a></li>
+                        <li role="presentation" class="logout"><a href="#" role="menuitem" tabindex="-1">Logout</a></li>
                     </ul>
                 </li>
             </ul>
