Fix two scrolling issues
Linking to another page should start it at the top
Maybe fix TOC scroll problem

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -34,6 +34,7 @@
         overflow-y: scroll;
         opacity: 1;
         transition: opacity 0.3s;
+        -webkit-overflow-scrolling: touch;
 
         @include desktop {
             background-color: rgba(color(neutral-dark), 0.90);
