Add min to numeric form fields
Also fix scroll top bug and a little code cleanup

--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -95,7 +95,7 @@
 
             <label>
                 How many students are using this book in your courses each semester?
-                <input name="00NU00000052VId" type="number" required />
+                <input name="00NU00000052VId" type="number" min=0 required />
             </label>
 
             <label>Which ally resources are you using with your book?
@@ -125,7 +125,7 @@
                 If there are other instructors in your department who will also be using this
                 book, approximately how many students in your department will be using this
                 book per semester?
-                <input name="00NU00000055sq1" type="number" />
+                <input name="00NU00000055sq1" type="number" min=0 />
             </label>
 
         </div>
