--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -83,7 +83,7 @@
 
         <label>
             Number of students this semester
-            <input name="00NU00000052VId" type="number" required />
+            <input name="00NU00000052VId" type="number" min="0" required />
         </label>
 
         <label>
@@ -116,4 +116,3 @@
     </div>
 </form>
 </div>
-
