--- a/src/app/pages/interest/interest.hbs
+++ b/src/app/pages/interest/interest.hbs
@@ -66,7 +66,7 @@
 
                 <label>
                     <span>Students per semester</span>
-                    <input name="00NU00000052VId" type="number" required>
+                    <input name="00NU00000052VId" type="number" min=0 required>
                 </label>
 
                 <label class="question">
