add site preloader

--- a/src/app/components/shell/shell.hbs
+++ b/src/app/components/shell/shell.hbs
@@ -1,4 +1,6 @@
 <div id="loader"></div>
-<div id="header"></div>
-<div id="main"></div>
-<div id="footer"></div>
+<div id="site-wrapper">
+    <div id="header"></div>
+    <div id="main"></div>
+    <div id="footer"></div>
+</div>
