--- a/src/app/components/products-boxes/products-boxes.hbs
+++ b/src/app/components/products-boxes/products-boxes.hbs
@@ -8,16 +8,32 @@
             <div class="image"></div>
             <div class="caption">
                 <h3 class="title">Our Books</h3>
-                <p class="blurb">Our college­ level textbooks for Advanced Placement® courses are peer-reviewed, completely free online, and will soon be available for a very low cost in print.</p>
-                <a class="btn" href="/subjects{{#if subject}}/{{subject}}{{/if}}">Explore Our Subjects</a>
+                <p class="blurb">{{ourBooksBlurb}}</p>
+                <a class="btn" href="/subjects{{subjectExplore}}">Explore Our Subjects</a>
             </div>
         </div>
+
+        {{#if cc}}
+        <div class="product-box cc">
+            <div class="image"></div>
+            <div class="caption">
+                <h3 class="title">Concept Coach</h3>
+                <p class="blurb">
+                    We're integrating our adaptive learning technology with our college textbooks to
+                    improve student reading comprehension at zero cost.
+                </p>
+                <a class="btn" href="//cc.openstax.org">Learn More</a>
+            </div>
+        </div>
+        {{/if}}
 
         <div class="product-box cnx">
             <div class="image"></div>
             <div class="caption">
                 <h3 class="title">OpenStax CNX</h3>
-                <p class="blurb">OpenStax CNX is an open library of educational content where anyone can contribute. View, share, and add material that you can remix and reuse for your course.</p>
+                <p class="blurb">
+                    OpenStax CNX is an open library of educational content where anyone can contribute. View, share, and add material that you can remix and reuse for your course.
+                </p>
                 <a class="btn" href="https://cnx.org">Discover Free Content</a>
             </div>
         </div>
