--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -430,7 +430,7 @@
     .authors {
         font-size: 1.6rem;
         line-height: 2.6rem;
-        padding: 6rem 0 3rem;
+        padding: 6rem 0 0;
 
         .container {
             flex-flow: column wrap;
@@ -483,6 +483,7 @@
         font-size: 1.6rem;
         line-height: 2.6rem;
         margin: 0 0 6rem;
+        padding: 6rem 0 0;
 
         .container {
             flex-flow: column wrap;
